--- a/src/reports/sample_selection.html
+++ b/src/reports/sample_selection.html
@@ -82,8 +82,12 @@
                 <span title="Available to choose">&oplus;</span>
               {% elif sample.status == Status.unprocessed %}
                 <span title="Unprocessed sample">&odot;</span>
-              {% elif sample.status == Status.rejected %}
-                <span title="Rejected sample">&otimes;</span>
+              {% elif sample.status == Status.reject_scientific_name %}
+                <span title="Rejected sample: More than one scientific name">&otimes;</span>
+              {% elif sample.status == Status.reject_yield_too_low %}
+                <span title="Rejected sample: Yield too low">&otimes;</span>
+              {% elif sample.status == Status.reject_low_priority %}
+                <span title="Rejected sample: Low priority sample">&otimes;</span>
               {% endif %}
             </td>
             <td class="l" colspan="3">{{sample.sci_name}}</td>
