Add rapid plate ID filter to sample plate report

--- a/src/reports/sample_plates_report.html
+++ b/src/reports/sample_plates_report.html
@@ -58,18 +58,31 @@
       <div class="search-left">
         <div class="search-control">
           <label>Filter by scientific name:</label>
-          <input id="search-sci-name" type="text" />
-          <button title="Clear search">X</button>
+          <span class="input-container">
+            <input id="search-sci-name" type="text" />
+            <button title="Clear search">X</button>
+          </span>
         </div>
         <div class="search-control">
           <label>Filter by family:</label>
-          <input id="search-family" type="text" />
-          <button title="Clear search">X</button>
+          <span class="input-container">
+            <input id="search-family" type="text" />
+            <button title="Clear search">X</button>
+          </span>
         </div>
         <div class="search-control">
           <label>Filter by sample ID:</label>
-          <input id="search-sample-id" type="text" />
-          <button title="Clear search">X</button>
+          <span class="input-container">
+            <input id="search-sample-id" type="text" />
+            <button title="Clear search">X</button>
+          </span>
+        </div>
+        <div class="search-control">
+          <label>Filter by Rapid Plate ID:</label>
+          <span class="input-container">
+            <input id="search-source-plate" type="text" />
+            <button title="Clear search">X</button>
+          </span>
         </div>
       </div>
       <div class="search-right">
