Making reports web-based WIP

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   </head>
   <body>
     <h1>NitFix Reports</h1>
-    <a href="./reports/sample_plates_report.html">Sample Plate Report</a>
-    <a href="./reports/sample_selection.html">Sample Selection Report</a>
+    <div class="link">
+      <a href="./reports/sample_plates_report.html">Sample Plate Report</a>
+    </div>
+    <div class="link">
+      <a href="./reports/data/sample_plates_report.xlsx">Sample Plate Report Excel</a>
+    </div>
+    <div class="link">
+      <a href="./reports/sample_selection.html">Sample Selection Report</a>
+    </div>
+    <div class="link">
+      <a href="./reports/data/sample_selection.csv">Sample Selection Report CSV</a>
+    </div>
   </body>
 </html>
