--- a/reports/sample_plates_report.html
+++ b/reports/sample_plates_report.html
@@ -16,33 +16,16 @@
   </h2>
   <section class="families closed">
     <table>
-      <tr class="header">
-        <td></td>
-        <td>Family</td>
-        <td>Genus</td>
-        <td>Total count</td>
-        <td>Imaged count</td>
-        <td>Percent imaged</td>
-      </tr>
-      <!-- {% for genus in genera %} -->
-        <tr class="closed {{ 'genus' if genus.genus else 'family' }}" data-family="{{ genus.family }}">
-          <!-- {% if genus.genus %} -->
-            <td></td>
-            <td></td>
-          <!-- {% else %} -->
-            <!-- {% if genus.family[0] != '~' %} -->
-              <td><button class="toggle closed" data-family="{{ genus.family }}" title="Open or close this family"></button></td>
-            <!-- {% else %} -->
-              <td></td>
-            <!-- {% endif %} -->
-            <td class="l">{{ genus.family }}</td>
-          <!-- {% endif %} -->
-          <td class="l">{{ genus.genus }}</td>
-          <td class="r">{{ '{:,}'.format(genus.total) if genus.total else '' }}</td>
-          <td class="r">{{ '{:,}'.format(genus.imaged) if genus.imaged else '' }}</td>
-          <td class="r">{{ '{:.2f}'.format(genus.percent) if genus.percent  else '' }}</td>
+      <tbody>
+        <tr class="header">
+          <td></td>
+          <td>Family</td>
+          <td>Genus</td>
+          <td>Total count</td>
+          <td>Imaged count</td>
+          <td>Percent imaged</td>
         </tr>
-      <!-- {% endfor %} -->
+      </tbody>
     </table>
   </section>
 
