Reports are now hosted on GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>NitFix Reports</title>
-    <link rel="stylesheet" href="./reports/css/index.css">
+    <style>
+      h1 {
+        font-size: 36px;
+      }
+      h1, div.link {
+        text-align: center;
+        margin: 40px 0;
+      }
+      a {
+        font-size: 24px;
+      }
+    </style>
   </head>
   <body>
     <h1>NitFix Reports</h1>
