Update sample selection report title

--- a/python/reports/sample_selection.html
+++ b/python/reports/sample_selection.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8" />
-<title>Sample plate report</title>
+<title>Sample selection</title>
 
 <style>
 {% include 'sample_selection.css' -%}
