--- a/python/reports/sample_selection.html
+++ b/python/reports/sample_selection.html
@@ -88,10 +88,12 @@
                 <span title="Rejected sample: Yield too low">&otimes;</span>
               {% elif sample.status == Status.reject_low_priority %}
                 <span title="Rejected sample: Low priority sample">&otimes;</span>
+              {% elif sample.status == Status.reject_genus_count %}
+                <span title="Rejected sample: Genus cutoff">&otimes;</span>
               {% endif %}
             </td>
             <td class="l" colspan="3">{{sample.sci_name}}</td>
-            <td class="r"><span>{{'' if sample.status == Status.unprocessed else sample.total_dna}}</span></td>
+            <td class="r"><span>{{'' if sample.status == Status.unprocessed else '{:.2f}'.format(sample.total_dna)}}</span></td>
             <td>{{sample.plate_id}}</td>
             <td>{{sample.well}}</td>
             <td colspan="3">{{sample.sample_id}}</td>
