Update reports to track samples thru Rapid's process

--- a/nitfix/reports/sample_plates_report.html
+++ b/nitfix/reports/sample_plates_report.html
@@ -78,7 +78,7 @@
           </span>
         </div>
         <div class="search-control">
-          <label>Filter by Rapid Plate ID:</label>
+          <label>Filter by Source Plate ID:</label>
           <span class="input-container">
             <input id="search-source-plate" type="text" />
             <button title="Clear search">X</button>
